--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+dataset/glove/glove.6B.200d.txt
+dataset/glove/glove.6B.100d.txt
+dataset/glove/glove.6B.50d.txt
+dataset/glove/glove.6B.300d.txt
